objects/ApplicationLink__c.object
<CustomObject>
    <fields>
        <fullName>IsArticle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Article</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVideo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PageType__c</fullName>
        <label>PageType</label>
        <picklist>
            <picklistValues>
                <fullName>Login Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landing Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>iPadApplication__c</fullName>
        <label>iPad Application</label>
        <referenceTo>iPadApplication__c</referenceTo>
        <relationshipLabel>Application Links</relationshipLabel>
        <relationshipName>ApplicationLinks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Application Link</label>
    <nameField>
        <label>Application Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>